Backend : Draft operation : added next_color to Vis_args Materials : Fixed card 79 (Quantum Extractor) rules text UI : Added Drafting towards Text when drafting      Moved the custom payment tool to gamestatus      Fixed Custom rendering of card 163      Hid 2nd VP gains on Awards when only 2 players play      Hid city on mars tracker on player board      Fixed blue cards overlapping when running out of space in 2a section      Fixed ers and eru tooltip images      Added a custom Cost section on awards tooltips      Fixed a bug loading sorted cards in hand from localstorage

--- a/src/css/CustomPay.scss
+++ b/src/css/CustomPay.scss
@@ -1,4 +1,4 @@
-#generalactions{
+#generalactions,#gameaction_status_wrap{
   --resourcesize: 30px;
 
   .token_img {
