--- a/src/css/GameXBody.scss
+++ b/src/css/GameXBody.scss
@@ -634,6 +634,11 @@
   background-position: -200% -100%;
 }
 
+/*don't display for now*/
+.tracker.tracker_cityonmars {
+  display: none !important;
+}
+
 .starting_player{
   position: relative;
   width: 36px;
