--- a/src/css/Map.scss
+++ b/src/css/Map.scss
@@ -1100,3 +1100,7 @@
     height: var(--card-width);
   }
 }
+
+.twoplayers #milestone_award_gain_2 {
+  display: none;
+}
