--- a/src/css/PlayerBoard.scss
+++ b/src/css/PlayerBoard.scss
@@ -527,7 +527,7 @@
 
 
   .cards_2a {
-    grid-area: 1 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
   }
   .cards_2 {
     /*
