--- a/src/css/Tooltips.scss
+++ b/src/css/Tooltips.scss
@@ -57,8 +57,13 @@
   background-image: url("img/resources.png");
   background-size: 1000% 200%;
 
-
 }
+
+.tooltipimage.tracker.tracker_eru,.tooltipimage.tracker.tracker_ers {
+  background-image: url("img/icons.png");
+  background-size: 1400% 200%;
+}
+
 .tooltipimage.tracker_pdelta {
   background-image: url("img/p_delta.jpg");
   background-size: contain;
